--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <title>Infinite Pro League</title>
 
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
