--- a/ovts1.html
+++ b/ovts1.html
@@ -1,145 +1,20 @@
-Open Valorant Tournament (OVT) by Infinite Pro League
-
-Season 1
-
-Rules and regulations
-
-1. GAME ACCOUNTS
-
-1.1 A player can have only one (1) Valorant account active on their account. Valorant / Riot I’d.
-
-1.2 You are not allowed to share or use another person’s game account. Your account is for your use, and your use alone.
-
-2. TEAMS AND ROSTERS
-
-2.1 Each team’s roster must consist of at least 5 players.
-
-2.2 Each team’s roster will be allowed to have 5 main players and 2 substitutes. Once the tournament starts, you cannot replace any player.
-
-2.3 A substitute player may only be added before the Tournament Start.
-
-2.4 This player cannot be part of any other team’s roster which is participating or has participated in the same tournament.
-
-2.5 Match must be played in the following format: 5v5.
-
-2.6 If a player / players fails to attend the match in time and the number of players in the team at the time is more than three (3), then the match will start.
-
-2.7 If a player / players fails to attend the match in time and the number of players in the team at the time is more less three (3), then the match can be cancelled.
-
-2.8 A player is allowed to represent only one Team.
-
-3. AGE RESTRICTIONS
-
-Each participant (Player) needs to be of the age of Sixteen (16) or older at the point of the tournament start date
-
-4. STREAMING
-
-4.1 Participants may stream the Tournament with the permission of the Tournament Administrators. Such permission should be sought by contacting Infinite Pro League on the Tournament Discord or emailing infiniteproleague@gmail.com.
-
-4.2 Each Participant that has permission to stream their Tournament must add OVT and Infinite Pro League branding to their stream (and maintain at all relevant times throughout the Tournament).
-
-5. PARTICIPANTS AND COMMITMENTS
-
-5.1 By participating in the Open Valorant Tournament, Participants acknowledge they will, without limitation, comply with the Tournament Rules and with the statements and decisions made by the Administration.
-
-5.2 Every Participant acknowledges the right for the Administration to modify the rules and regulations for adjustments at any time without notice and if necessary overrule those to ensure fair play and integrity throughout the Tournament.
-
-5.3 Every Participant must be respectful towards Admins and other Participants. Insults and unfair or disrespectful behaviour will not be tolerated and will be punished in accordance with these rules.
-
-5.4 Every Team Captain can join the Discord server to communicate with Admins for the Tournament. The link to the Discord server will be provided to participants before the start of the Tournament.
-
-5.5 Every Participant has to try to win every round of the Tournament. Purposefully losing for any reason is strictly forbidden.
-
-5.6 Vulgar, racist, sexist or otherwise offensive player names are forbidden. This will be at the sole discretion of the Tournament Admins.
-
-5.7 Every Participant acknowledges the right for the Administration to edit players’ names if names are deemed unfit for display.
-
-5.8 Every Participant in the Open Valorant Tournament consent to the collection of footage, photo and audio material displaying or voicing them during the Tournament to be stored and used for announcements, website content and other publications by Infinite Pro League unrestricted and unlimited in terms of time and place.
-
-6. FORMAT & SCHEDULE
-
-6.1 Tournament Format: Knock Out
-
-6.2 Score metrics: All matches except the Grand Finals will be a Best-of-One. The Grand Finals will be played as a Best-of-Three.
-
-6.3 Registration: All participant will have to register via website (www.infiniteproleague.games). Teams have a check-in period of 60 minutes before the tournament starts.
-
-6.4 Schedule: OVT will start on 13th April 2024 at 8:30 PM IST.
-
-6.5 Tournament Restrictions: Participants must commit to playing the entire Tournament. Team Participants must remain the same for the entirety of the Tournament to ensure a level playing field. If Participants can no longer participate once the Tournament has started, the Administration will suggest the next steps and the Participant may risk forfeiting their whole Team. This is at the Administration’s sole discretion.
-
- 
-
-7. MATCH TIMES
-
-7.1 Match Times: Each game will be played at a time within the Tournament Window to be determined by the Administration at their sole discretion. The first match will be played on 13th April 2024, 8:30 PM IST.
-
-7.2 Rescheduling / Postponing: Matches cannot be postponed or rescheduled to another date or time unless determined by the Administration at its sole discretion for any reason.
-
-7.3 Punctuality: Matches start at the time stated by the Administration. Each participant will have to confirm their presence in the room before the confirmation timer runs out. Matches cannot be started earlier.
-
-    Matches can't be delayed for any reason unless the previous match ran for longer than planned.
-
-    If one Team is not ready to start at the official match time, the administration in their sole discretion may disqualify the Team from the match or the Tournament.     Admins may extend the punctuality deadline in exceptional circumstances to get the match played at its sole discretion.
-
-8. BEFORE THE MATCH
-
-8.1 Check-In: All Team Captains can join the Tournament Discord server and check in with Tournament staff. All Participants must be available at the time the Tournament rounds start and ready up for each match.
-
-8.2 Map Selection: Map selection will be according to a voting system, voted by the Team Captains.
-
-9. DURING THE MATCH
-
-9.1 Streams: Check rule 4.
-
-9.2.1 Match Start & Restarts: From the time a match begins, Participants are prohibited from intentionally disconnecting from the game. If a Participant or Team disconnects intentionally after the game has started, the game will continue with the remaining players and will not be restarted.
-
-9.2.2 Match Start & Restarts: A Team may request a match restart if the fairness of the game is seriously compromised by an issue outside of the player’s control. Matters that may lead to the match being restarted include but are not limited to:
-
-• enemy players using 3rd party tools or software in breach of Riot's Terms of Service; or
-
-• if the game crashes for all players.
-
-9.2.3 Match Start & Restarts: All restart requests need to be flagged to the Admin team before a restart can be actioned. Evidence to support the request must be shared and the decision on the restart will be at the sole discretion of the Admin.
-
-9.3 Breach of Terms of Use: If Participants are found guilty of Bug Abuse or in breach of Riot's Terms of Service, they may face consequences including automatic disqualification. All punishment will be at the sole discretion of the Administration.
-
-10. AFTER THE MATCH
-
-10.1 Reporting the score: Each Team Captain must retain a screenshot of each game’s score when the game finishes. This evidence must be a screenshot of the end game leaderboard. Tournament staff will be monitoring the games but will still require scores to be submitted by each Team Captain.
-
-10.2 Protests: Protest against any other sort of rule violation by another player can only be reported with video evidence. The protest must include a specific timestamp when the violation took place, the name of the player who committed the violation, as well as a clear description of what happened. Protests that either lack evidence or details such as timestamp and description will be discarded. All protests must be sent to an Admin via the Tournament Discord server or through other official channel (e.g. WhatsApp) or through the Tournament email address: infiniteproleague@gmail.com.
-
-11.CHEATING
-
-It is forbidden to cheat, modify the game files, exploit bugs, and/or use any third-party application which would give an unfair advantage against other users. All cheats are completely forbidden to use under any circumstance while playing the tournament Using any cheat will result in bans and disqualifications. This includes, but are not limited to:
-
-• ESP
-
-• Radar hacks
-
-• Wallhacks
-
-• Speed hacks
-
-• Aim hacks
-
-• Hitbox manipulation
-
-• Teleportation (any kind of teleportation, which is not possible in the game)
-
-• The usage of a bug/bugs to gain an advantage versus your opponents
-
-• If a team uses a player that has an active ban by GLL, the team will be disqualified from the tournament.
-
-12. RULE VIOLATION AND PUNISHMENT
-
-The punishments for any rule violations include but are not limited to:
-
-• Loss of one match
-
-• Disqualification from the Tournament
-
-• Disqualification from future tournaments
-
-Punishments shall be at the Administration’s sole discretion.
+<!DOCTYPE html> 
+<html> 
+  
+<head> 
+    <title>Rules & RegulationsL</title> 
+</head> 
+  
+<body> 
+    <center> 
+        <!-- <h1 style="color: green">GeeksforGeeks</h1> 
+        <h3>Embedding the PDF file Using Object Tag</h3>  -->
+        <object data= 
+"assets/OVTTC.pdf" 
+                width="100%"
+                height="600px"> 
+        </object> 
+    </center> 
+</body> 
+  
+</html>
