--- a/ovts1.html
+++ b/ovts1.html
@@ -3,14 +3,27 @@
   
 <head> 
     <title>Rules & RegulationsL</title> 
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="stylesheet" href="assets/css/evnt1norm.css" />
+    <link rel="stylesheet" href="assets/css/event1.css" />
 </head> 
   
 <body> 
+
+    <nav>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+            <a href="event1.html">Register Now</a>
+            <a href="aboutovt.html">About OVT</a>
+            
+        </ul>
+      </nav>
     <center> 
         <!-- <h1 style="color: green">GeeksforGeeks</h1> 
         <h3>Embedding the PDF file Using Object Tag</h3>  -->
         <object data= 
-"assets/OVTTC.pdf" 
+"assets/OVT TC.pdf" 
                 width="100%"
                 height="600px"> 
         </object> 
