--- a/event1.html
+++ b/event1.html
@@ -14,13 +14,14 @@
         <li>
           <a href="index.html">Home</a>
           <a href="ovts1.html">Rules And Regulations</a>
+          <a href="aboutovt.html">About OVT</a>
           
       </ul>
     </nav>
 
     <div class="signupWrapper">
       
-        <iframe src="https://www.yepdesk.com/embed/open-register/65e2e4d1c9e77c0001ad67ad/d5q162t2p0" width="100%" height="100%" frameborder="0" marginheight="100vh" marginwidth="0" >Loading…</iframe>"
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetH0cmE7tfW9-T1bCh6MwSmtyYlsKMzl2aoQ7F2HkGHUgXRQ/viewform?usp=sf_link" width="100%" height="100%" frameborder="0" marginheight="100vh" marginwidth="0" >Loading…</iframe>"
     </div>
      <footer>
     <div class="container">
